--- a/stable/latest/book/todo_1.html
+++ b/stable/latest/book/todo_1.html
@@ -89,11 +89,33 @@
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
 
+        <!-- Track and set sidebar scroll position -->
+        <script>
+            var sidebarScrollbox = document.querySelector('#sidebar .sidebar-scrollbox');
+            sidebarScrollbox.addEventListener('click', function(e) {
+                if (e.target.tagName === 'A') {
+                    sessionStorage.setItem('sidebar-scroll', sidebarScrollbox.scrollTop);
+                }
+            }, { passive: true });
+            var sidebarScrollTop = sessionStorage.getItem('sidebar-scroll');
+            sessionStorage.removeItem('sidebar-scroll');
+            if (sidebarScrollTop) {
+                // preserve sidebar scroll position when navigating via links within sidebar
+                sidebarScrollbox.scrollTop = sidebarScrollTop;
+            } else {
+                // scroll sidebar to current active section when navigating via "next/previous chapter" buttons
+                var activeSection = document.querySelector('#sidebar .active');
+                if (activeSection) {
+                    activeSection.scrollIntoView({ block: 'center' });
+                }
+            }
+        </script>
+
         <div id="page-wrapper" class="page-wrapper">
 
             <div class="page">
                                 <div id="menu-bar-hover-placeholder"></div>
-                <div id="menu-bar" class="menu-bar sticky bordered">
+                <div id="menu-bar" class="menu-bar sticky">
                     <div class="left-buttons">
                         <button id="sidebar-toggle" class="icon-button" type="button" title="Toggle Table of Contents" aria-label="Toggle Table of Contents" aria-controls="sidebar">
                             <i class="fa fa-bars"></i>
@@ -232,7 +254,7 @@ As usual, we have to list all <a href="https://docs.gtk.org/gtk4/class.Applicati
 </span><span class="boring">
 </span><span class="boring">    fn setup_tasks(&amp;self) {
 </span><span class="boring">        // Create new model
-</span><span class="boring">        let model = gio::ListStore::new(TaskObject::static_type());
+</span><span class="boring">        let model = gio::ListStore::new::&lt;TaskObject&gt;();
 </span><span class="boring">
 </span><span class="boring">        // Get state and set model
 </span><span class="boring">        self.imp().tasks.replace(Some(model));
@@ -499,7 +521,7 @@ For each property we additionally specify the name, the type and which member va
 <p>Filename: <a class=file-link href="https://github.com/gtk-rs/gtk4-rs/blob/master/book/listings/todo/1/task_object/imp.rs">listings/todo/1/task_object/imp.rs</a></p>
 <pre><code class="language-rust  no_run noplayground"><span class="boring">use std::cell::RefCell;
 </span><span class="boring">
-</span><span class="boring">use glib::{ParamSpec, Properties, Value};
+</span><span class="boring">use glib::Properties;
 </span><span class="boring">use gtk::glib;
 </span><span class="boring">use gtk::prelude::*;
 </span><span class="boring">use gtk::subclass::prelude::*;
@@ -523,19 +545,8 @@ impl ObjectSubclass for TaskObject {
 }
 
 // Trait shared by all GObjects
-impl ObjectImpl for TaskObject {
-    fn properties() -&gt; &amp;'static [ParamSpec] {
-        Self::derived_properties()
-    }
-
-    fn set_property(&amp;self, id: usize, value: &amp;Value, pspec: &amp;ParamSpec) {
-        self.derived_set_property(id, value, pspec)
-    }
-
-    fn property(&amp;self, id: usize, pspec: &amp;ParamSpec) -&gt; Value {
-        self.derived_property(id, pspec)
-    }
-}</code></pre>
+#[glib::derived_properties]
+impl ObjectImpl for TaskObject {}</code></pre>
 <h2 id="task-row"><a class="header" href="#task-row">Task Row</a></h2>
 <p>Let's move on to the individual tasks.
 The row of a task should look like this:</p>
@@ -568,7 +579,7 @@ The row of a task should look like this:</p>
 <p>Filename: <a class=file-link href="https://github.com/gtk-rs/gtk4-rs/blob/master/book/listings/todo/1/task_row/mod.rs">listings/todo/1/task_row/mod.rs</a></p>
 <pre><code class="language-rust  no_run noplayground"><span class="boring">mod imp;
 </span><span class="boring">
-</span><span class="boring">use glib::{BindingFlags, Object};
+</span><span class="boring">use glib::Object;
 </span><span class="boring">use gtk::prelude::*;
 </span><span class="boring">use gtk::subclass::prelude::*;
 </span><span class="boring">use gtk::{glib, pango};
@@ -602,7 +613,8 @@ The row of a task should look like this:</p>
 </span><span class="boring">        // Bind `task_object.completed` to `task_row.completed_button.active`
 </span><span class="boring">        let completed_button_binding = task_object
 </span><span class="boring">            .bind_property(&quot;completed&quot;, &amp;completed_button, &quot;active&quot;)
-</span><span class="boring">            .flags(BindingFlags::SYNC_CREATE | BindingFlags::BIDIRECTIONAL)
+</span><span class="boring">            .bidirectional()
+</span><span class="boring">            .sync_create()
 </span><span class="boring">            .build();
 </span><span class="boring">        // Save binding
 </span><span class="boring">        bindings.push(completed_button_binding);
@@ -610,7 +622,7 @@ The row of a task should look like this:</p>
 </span><span class="boring">        // Bind `task_object.content` to `task_row.content_label.label`
 </span><span class="boring">        let content_label_binding = task_object
 </span><span class="boring">            .bind_property(&quot;content&quot;, &amp;content_label, &quot;label&quot;)
-</span><span class="boring">            .flags(BindingFlags::SYNC_CREATE)
+</span><span class="boring">            .sync_create()
 </span><span class="boring">            .build();
 </span><span class="boring">        // Save binding
 </span><span class="boring">        bindings.push(content_label_binding);
@@ -618,7 +630,7 @@ The row of a task should look like this:</p>
 </span><span class="boring">        // Bind `task_object.completed` to `task_row.content_label.attributes`
 </span><span class="boring">        let content_label_binding = task_object
 </span><span class="boring">            .bind_property(&quot;completed&quot;, &amp;content_label, &quot;attributes&quot;)
-</span><span class="boring">            .flags(BindingFlags::SYNC_CREATE)
+</span><span class="boring">            .sync_create()
 </span><span class="boring">            .transform_to(|_, active| {
 </span><span class="boring">                let attribute_list = AttrList::new();
 </span><span class="boring">                if active {
@@ -784,7 +796,7 @@ Then we store a reference to the model in <code>imp::Window</code> as well as in
 
     fn setup_tasks(&amp;self) {
         // Create new model
-        let model = gio::ListStore::new(TaskObject::static_type());
+        let model = gio::ListStore::new::&lt;TaskObject&gt;();
 
         // Get state and set model
         self.imp().tasks.replace(Some(model));
@@ -915,7 +927,7 @@ Finally, the entry will be cleared.</p>
 </span><span class="boring">
 </span><span class="boring">    fn setup_tasks(&amp;self) {
 </span><span class="boring">        // Create new model
-</span><span class="boring">        let model = gio::ListStore::new(TaskObject::static_type());
+</span><span class="boring">        let model = gio::ListStore::new::&lt;TaskObject&gt;();
 </span><span class="boring">
 </span><span class="boring">        // Get state and set model
 </span><span class="boring">        self.imp().tasks.replace(Some(model));
@@ -1052,7 +1064,7 @@ We will need to unbind them manually when they are no longer needed.</p>
 </span><span class="boring">
 </span><span class="boring">    fn setup_tasks(&amp;self) {
 </span><span class="boring">        // Create new model
-</span><span class="boring">        let model = gio::ListStore::new(TaskObject::static_type());
+</span><span class="boring">        let model = gio::ListStore::new::&lt;TaskObject&gt;();
 </span><span class="boring">
 </span><span class="boring">        // Get state and set model
 </span><span class="boring">        self.imp().tasks.replace(Some(model));
@@ -1152,7 +1164,7 @@ Unbinding will only work if it can access the stored <a href="https://gtk-rs.org
 <p>Filename: <a class=file-link href="https://github.com/gtk-rs/gtk4-rs/blob/master/book/listings/todo/1/task_row/mod.rs">listings/todo/1/task_row/mod.rs</a></p>
 <pre><code class="language-rust  no_run noplayground"><span class="boring">mod imp;
 </span><span class="boring">
-</span><span class="boring">use glib::{BindingFlags, Object};
+</span><span class="boring">use glib::Object;
 </span><span class="boring">use gtk::prelude::*;
 </span><span class="boring">use gtk::subclass::prelude::*;
 </span><span class="boring">use gtk::{glib, pango};
@@ -1186,7 +1198,8 @@ Unbinding will only work if it can access the stored <a href="https://gtk-rs.org
         // Bind `task_object.completed` to `task_row.completed_button.active`
         let completed_button_binding = task_object
             .bind_property(&quot;completed&quot;, &amp;completed_button, &quot;active&quot;)
-            .flags(BindingFlags::SYNC_CREATE | BindingFlags::BIDIRECTIONAL)
+            .bidirectional()
+            .sync_create()
             .build();
         // Save binding
         bindings.push(completed_button_binding);
@@ -1194,7 +1207,7 @@ Unbinding will only work if it can access the stored <a href="https://gtk-rs.org
         // Bind `task_object.content` to `task_row.content_label.label`
         let content_label_binding = task_object
             .bind_property(&quot;content&quot;, &amp;content_label, &quot;label&quot;)
-            .flags(BindingFlags::SYNC_CREATE)
+            .sync_create()
             .build();
         // Save binding
         bindings.push(content_label_binding);
@@ -1202,7 +1215,7 @@ Unbinding will only work if it can access the stored <a href="https://gtk-rs.org
         // Bind `task_object.completed` to `task_row.content_label.attributes`
         let content_label_binding = task_object
             .bind_property(&quot;completed&quot;, &amp;content_label, &quot;attributes&quot;)
-            .flags(BindingFlags::SYNC_CREATE)
+            .sync_create()
             .transform_to(|_, active| {
                 let attribute_list = AttrList::new();
                 if active {
@@ -1230,7 +1243,7 @@ In the end, it clears the vector.</p>
 <p>Filename: <a class=file-link href="https://github.com/gtk-rs/gtk4-rs/blob/master/book/listings/todo/1/task_row/mod.rs">listings/todo/1/task_row/mod.rs</a></p>
 <pre><code class="language-rust  no_run noplayground"><span class="boring">mod imp;
 </span><span class="boring">
-</span><span class="boring">use glib::{BindingFlags, Object};
+</span><span class="boring">use glib::Object;
 </span><span class="boring">use gtk::prelude::*;
 </span><span class="boring">use gtk::subclass::prelude::*;
 </span><span class="boring">use gtk::{glib, pango};
@@ -1264,7 +1277,8 @@ In the end, it clears the vector.</p>
 </span><span class="boring">        // Bind `task_object.completed` to `task_row.completed_button.active`
 </span><span class="boring">        let completed_button_binding = task_object
 </span><span class="boring">            .bind_property(&quot;completed&quot;, &amp;completed_button, &quot;active&quot;)
-</span><span class="boring">            .flags(BindingFlags::SYNC_CREATE | BindingFlags::BIDIRECTIONAL)
+</span><span class="boring">            .bidirectional()
+</span><span class="boring">            .sync_create()
 </span><span class="boring">            .build();
 </span><span class="boring">        // Save binding
 </span><span class="boring">        bindings.push(completed_button_binding);
@@ -1272,7 +1286,7 @@ In the end, it clears the vector.</p>
 </span><span class="boring">        // Bind `task_object.content` to `task_row.content_label.label`
 </span><span class="boring">        let content_label_binding = task_object
 </span><span class="boring">            .bind_property(&quot;content&quot;, &amp;content_label, &quot;label&quot;)
-</span><span class="boring">            .flags(BindingFlags::SYNC_CREATE)
+</span><span class="boring">            .sync_create()
 </span><span class="boring">            .build();
 </span><span class="boring">        // Save binding
 </span><span class="boring">        bindings.push(content_label_binding);
@@ -1280,7 +1294,7 @@ In the end, it clears the vector.</p>
 </span><span class="boring">        // Bind `task_object.completed` to `task_row.content_label.attributes`
 </span><span class="boring">        let content_label_binding = task_object
 </span><span class="boring">            .bind_property(&quot;completed&quot;, &amp;content_label, &quot;attributes&quot;)
-</span><span class="boring">            .flags(BindingFlags::SYNC_CREATE)
+</span><span class="boring">            .sync_create()
 </span><span class="boring">            .transform_to(|_, active| {
 </span><span class="boring">                let attribute_list = AttrList::new();
 </span><span class="boring">                if active {
