--- a/stable/latest/book/list_widgets.html
+++ b/stable/latest/book/list_widgets.html
@@ -89,11 +89,33 @@
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
 
+        <!-- Track and set sidebar scroll position -->
+        <script>
+            var sidebarScrollbox = document.querySelector('#sidebar .sidebar-scrollbox');
+            sidebarScrollbox.addEventListener('click', function(e) {
+                if (e.target.tagName === 'A') {
+                    sessionStorage.setItem('sidebar-scroll', sidebarScrollbox.scrollTop);
+                }
+            }, { passive: true });
+            var sidebarScrollTop = sessionStorage.getItem('sidebar-scroll');
+            sessionStorage.removeItem('sidebar-scroll');
+            if (sidebarScrollTop) {
+                // preserve sidebar scroll position when navigating via links within sidebar
+                sidebarScrollbox.scrollTop = sidebarScrollTop;
+            } else {
+                // scroll sidebar to current active section when navigating via "next/previous chapter" buttons
+                var activeSection = document.querySelector('#sidebar .active');
+                if (activeSection) {
+                    activeSection.scrollIntoView({ block: 'center' });
+                }
+            }
+        </script>
+
         <div id="page-wrapper" class="page-wrapper">
 
             <div class="page">
                                 <div id="menu-bar-hover-placeholder"></div>
-                <div id="menu-bar" class="menu-bar sticky bordered">
+                <div id="menu-bar" class="menu-bar sticky">
                     <div class="left-buttons">
                         <button id="sidebar-toggle" class="icon-button" type="button" title="Toggle Table of Contents" aria-label="Toggle Table of Contents" aria-controls="sidebar">
                             <i class="fa fa-bars"></i>
@@ -289,7 +311,7 @@ impl IntegerObject {
 <p>Filename: <a class=file-link href="https://github.com/gtk-rs/gtk4-rs/blob/master/book/listings/list_widgets/2/integer_object/imp.rs">listings/list_widgets/2/integer_object/imp.rs</a></p>
 <pre><code class="language-rust  no_run noplayground"><span class="boring">use std::cell::Cell;
 </span><span class="boring">
-</span><span class="boring">use glib::{ParamSpec, Properties, Value};
+</span><span class="boring">use glib::Properties;
 </span><span class="boring">use gtk::glib;
 </span><span class="boring">use gtk::prelude::*;
 </span><span class="boring">use gtk::subclass::prelude::*;
@@ -310,19 +332,8 @@ pub struct IntegerObject {
 </span><span class="boring">}
 </span><span class="boring">
 </span><span class="boring">// Trait shared by all GObjects
-</span><span class="boring">impl ObjectImpl for IntegerObject {
-</span><span class="boring">    fn properties() -&gt; &amp;'static [ParamSpec] {
-</span><span class="boring">        Self::derived_properties()
-</span><span class="boring">    }
-</span><span class="boring">
-</span><span class="boring">    fn set_property(&amp;self, id: usize, value: &amp;Value, pspec: &amp;ParamSpec) {
-</span><span class="boring">        self.derived_set_property(id, value, pspec)
-</span><span class="boring">    }
-</span><span class="boring">
-</span><span class="boring">    fn property(&amp;self, id: usize, pspec: &amp;ParamSpec) -&gt; Value {
-</span><span class="boring">        self.derived_property(id, pspec)
-</span><span class="boring">    }
-</span><span class="boring">}
+</span><span class="boring">#[glib::derived_properties]
+</span><span class="boring">impl ObjectImpl for IntegerObject {}
 </span><span class="boring"></span></code></pre>
 <p>We now fill the model with integers from 0 to 100 000.
 Please note that models only takes care of the data.
@@ -355,7 +366,7 @@ Neither <code>Label</code> nor any other widget is mentioned here.</p>
     let vector: Vec&lt;IntegerObject&gt; = (0..=100_000).map(IntegerObject::new).collect();
 
     // Create new model
-    let model = gio::ListStore::new(IntegerObject::static_type());
+    let model = gio::ListStore::new::&lt;IntegerObject&gt;();
 
     // Add the vector to the model
     model.extend_from_slice(&amp;vector);
@@ -443,7 +454,7 @@ We connect to it to create a <code>Label</code> for every requested widget.</p>
 </span><span class="boring">    let vector: Vec&lt;IntegerObject&gt; = (0..=100_000).map(IntegerObject::new).collect();
 </span><span class="boring">
 </span><span class="boring">    // Create new model
-</span><span class="boring">    let model = gio::ListStore::new(IntegerObject::static_type());
+</span><span class="boring">    let model = gio::ListStore::new::&lt;IntegerObject&gt;();
 </span><span class="boring">
 </span><span class="boring">    // Add the vector to the model
 </span><span class="boring">    model.extend_from_slice(&amp;vector);
@@ -528,7 +539,7 @@ We connect to it to create a <code>Label</code> for every requested widget.</p>
 </span><span class="boring">    let vector: Vec&lt;IntegerObject&gt; = (0..=100_000).map(IntegerObject::new).collect();
 </span><span class="boring">
 </span><span class="boring">    // Create new model
-</span><span class="boring">    let model = gio::ListStore::new(IntegerObject::static_type());
+</span><span class="boring">    let model = gio::ListStore::new::&lt;IntegerObject&gt;();
 </span><span class="boring">
 </span><span class="boring">    // Add the vector to the model
 </span><span class="boring">    model.extend_from_slice(&amp;vector);
@@ -615,7 +626,7 @@ Then we pass the model and the factory to the <a href="../docs/gtk4/struct.ListV
 </span><span class="boring">    let vector: Vec&lt;IntegerObject&gt; = (0..=100_000).map(IntegerObject::new).collect();
 </span><span class="boring">
 </span><span class="boring">    // Create new model
-</span><span class="boring">    let model = gio::ListStore::new(IntegerObject::static_type());
+</span><span class="boring">    let model = gio::ListStore::new::&lt;IntegerObject&gt;();
 </span><span class="boring">
 </span><span class="boring">    // Add the vector to the model
 </span><span class="boring">    model.extend_from_slice(&amp;vector);
@@ -700,7 +711,7 @@ Then we pass the model and the factory to the <a href="../docs/gtk4/struct.ListV
 </span><span class="boring">    let vector: Vec&lt;IntegerObject&gt; = (0..=100_000).map(IntegerObject::new).collect();
 </span><span class="boring">
 </span><span class="boring">    // Create new model
-</span><span class="boring">    let model = gio::ListStore::new(IntegerObject::static_type());
+</span><span class="boring">    let model = gio::ListStore::new::&lt;IntegerObject&gt;();
 </span><span class="boring">
 </span><span class="boring">    // Add the vector to the model
 </span><span class="boring">    model.extend_from_slice(&amp;vector);
@@ -784,7 +795,6 @@ For that we first add the method <code>increase_number</code> to our <code>Integ
 <p>Filename: <a class=file-link href="https://github.com/gtk-rs/gtk4-rs/blob/master/book/listings/list_widgets/3/main.rs">listings/list_widgets/3/main.rs</a></p>
 <pre><code class="language-rust  no_run noplayground"><span class="boring">mod integer_object;
 </span><span class="boring">
-</span><span class="boring">use glib::BindingFlags;
 </span><span class="boring">use gtk::{
 </span><span class="boring">    gio, glib, Application, ApplicationWindow, Label, ListView, PolicyType,
 </span><span class="boring">    ScrolledWindow, SignalListItemFactory, SingleSelection,
@@ -810,7 +820,7 @@ For that we first add the method <code>increase_number</code> to our <code>Integ
 </span><span class="boring">    let vector: Vec&lt;IntegerObject&gt; = (0..=100_000).map(IntegerObject::new).collect();
 </span><span class="boring">
 </span><span class="boring">    // Create new model
-</span><span class="boring">    let model = gio::ListStore::new(IntegerObject::static_type());
+</span><span class="boring">    let model = gio::ListStore::new::&lt;IntegerObject&gt;();
 </span><span class="boring">
 </span><span class="boring">    // Add the vector to the model
 </span><span class="boring">    model.extend_from_slice(&amp;vector);
@@ -844,7 +854,7 @@ For that we first add the method <code>increase_number</code> to our <code>Integ
 </span><span class="boring">        // Bind &quot;label&quot; to &quot;number&quot;
 </span><span class="boring">        integer_object
 </span><span class="boring">            .bind_property(&quot;number&quot;, &amp;label, &quot;label&quot;)
-</span><span class="boring">            .flags(BindingFlags::SYNC_CREATE)
+</span><span class="boring">            .sync_create()
 </span><span class="boring">            .build();
 </span><span class="boring">    });
 </span><span class="boring">
@@ -888,7 +898,6 @@ One naive approach would be to bind the properties in the &quot;bind&quot; step 
 <p>Filename: <a class=file-link href="https://github.com/gtk-rs/gtk4-rs/blob/master/book/listings/list_widgets/3/main.rs">listings/list_widgets/3/main.rs</a></p>
 <pre><code class="language-rust  no_run noplayground"><span class="boring">mod integer_object;
 </span><span class="boring">
-</span><span class="boring">use glib::BindingFlags;
 </span><span class="boring">use gtk::{
 </span><span class="boring">    gio, glib, Application, ApplicationWindow, Label, ListView, PolicyType,
 </span><span class="boring">    ScrolledWindow, SignalListItemFactory, SingleSelection,
@@ -914,7 +923,7 @@ One naive approach would be to bind the properties in the &quot;bind&quot; step 
 </span><span class="boring">    let vector: Vec&lt;IntegerObject&gt; = (0..=100_000).map(IntegerObject::new).collect();
 </span><span class="boring">
 </span><span class="boring">    // Create new model
-</span><span class="boring">    let model = gio::ListStore::new(IntegerObject::static_type());
+</span><span class="boring">    let model = gio::ListStore::new::&lt;IntegerObject&gt;();
 </span><span class="boring">
 </span><span class="boring">    // Add the vector to the model
 </span><span class="boring">    model.extend_from_slice(&amp;vector);
@@ -948,7 +957,7 @@ One naive approach would be to bind the properties in the &quot;bind&quot; step 
         // Bind &quot;label&quot; to &quot;number&quot;
         integer_object
             .bind_property(&quot;number&quot;, &amp;label, &quot;label&quot;)
-            .flags(BindingFlags::SYNC_CREATE)
+            .sync_create()
             .build();
     });
 <span class="boring">
@@ -1023,7 +1032,7 @@ Let's see how the &quot;setup&quot; step now works.</p>
 </span><span class="boring">    let vector: Vec&lt;IntegerObject&gt; = (0..=100_000).map(IntegerObject::new).collect();
 </span><span class="boring">
 </span><span class="boring">    // Create new model
-</span><span class="boring">    let model = gio::ListStore::new(IntegerObject::static_type());
+</span><span class="boring">    let model = gio::ListStore::new::&lt;IntegerObject&gt;();
 </span><span class="boring">
 </span><span class="boring">    // Add the vector to the model
 </span><span class="boring">    model.extend_from_slice(&amp;vector);
@@ -1118,7 +1127,7 @@ We do that by passing it to a <a href="../docs/gtk4/struct.FilterListModel.html"
 </span><span class="boring">    let vector: Vec&lt;IntegerObject&gt; = (0..=100_000).map(IntegerObject::new).collect();
 </span><span class="boring">
 </span><span class="boring">    // Create new model
-</span><span class="boring">    let model = gio::ListStore::new(IntegerObject::static_type());
+</span><span class="boring">    let model = gio::ListStore::new::&lt;IntegerObject&gt;();
 </span><span class="boring">
 </span><span class="boring">    // Add the vector to the model
 </span><span class="boring">    model.extend_from_slice(&amp;vector);
@@ -1236,7 +1245,7 @@ Now we pass the filtered model to <a href="../docs/gtk4/struct.SortListModel.htm
 </span><span class="boring">    let vector: Vec&lt;IntegerObject&gt; = (0..=100_000).map(IntegerObject::new).collect();
 </span><span class="boring">
 </span><span class="boring">    // Create new model
-</span><span class="boring">    let model = gio::ListStore::new(IntegerObject::static_type());
+</span><span class="boring">    let model = gio::ListStore::new::&lt;IntegerObject&gt;();
 </span><span class="boring">
 </span><span class="boring">    // Add the vector to the model
 </span><span class="boring">    model.extend_from_slice(&amp;vector);
@@ -1353,7 +1362,7 @@ Now we pass the filtered model to <a href="../docs/gtk4/struct.SortListModel.htm
 </span><span class="boring">    let vector: Vec&lt;IntegerObject&gt; = (0..=100_000).map(IntegerObject::new).collect();
 </span><span class="boring">
 </span><span class="boring">    // Create new model
-</span><span class="boring">    let model = gio::ListStore::new(IntegerObject::static_type());
+</span><span class="boring">    let model = gio::ListStore::new::&lt;IntegerObject&gt;();
 </span><span class="boring">
 </span><span class="boring">    // Add the vector to the model
 </span><span class="boring">    model.extend_from_slice(&amp;vector);
@@ -1473,10 +1482,7 @@ This is why we will skip this topic here.</p>
 </span><span class="boring">fn build_ui(app: &amp;Application) {
 </span>    // Create a `StringList` with number from 0 to 100_000
     // `StringList` implements FromIterator&lt;String&gt;
-    let model: StringList = (0..=100_000)
-        .into_iter()
-        .map(|number| number.to_string())
-        .collect();
+    let model: StringList = (0..=100_000).map(|number| number.to_string()).collect();
 <span class="boring">
 </span><span class="boring">    let factory = SignalListItemFactory::new();
 </span><span class="boring">    factory.connect_setup(move |_, list_item| {
@@ -1518,7 +1524,7 @@ This is why we will skip this topic here.</p>
 <p>Note that we can create a <code>StringList</code> directly from an iterator over strings.
 This means we don't have to create a custom GObject for our model anymore.</p>
 <p>As usual, we connect the label to the list item via an expression.
-Here we can use <a href="../docs/gtk4/struct.StringObject.html"><code>StringObject</code></a>, which exposes its content via the <a href="https://docs.gtk.org/gtk4/property.StringObject.string.html">property &quot;string&quot;</a>.</p>
+Here we can use <a href="../docs/gtk4/struct.StringObject.html"><code>StringObject</code></a>, which exposes its content via the <a href="../docs/gtk4/struct.StringObject.html#string">property &quot;string&quot;</a>.</p>
 <p>Filename: <a class=file-link href="https://github.com/gtk-rs/gtk4-rs/blob/master/book/listings/list_widgets/6/main.rs">listings/list_widgets/6/main.rs</a></p>
 <pre><code class="language-rust  no_run noplayground"><span class="boring">use gtk::{glib, prelude::*, ListItem};
 </span><span class="boring">use gtk::{
@@ -1542,10 +1548,7 @@ Here we can use <a href="../docs/gtk4/struct.StringObject.html"><code>StringObje
 </span><span class="boring">fn build_ui(app: &amp;Application) {
 </span><span class="boring">    // Create a `StringList` with number from 0 to 100_000
 </span><span class="boring">    // `StringList` implements FromIterator&lt;String&gt;
-</span><span class="boring">    let model: StringList = (0..=100_000)
-</span><span class="boring">        .into_iter()
-</span><span class="boring">        .map(|number| number.to_string())
-</span><span class="boring">        .collect();
+</span><span class="boring">    let model: StringList = (0..=100_000).map(|number| number.to_string()).collect();
 </span><span class="boring">
 </span><span class="boring">    let factory = SignalListItemFactory::new();
 </span>    factory.connect_setup(move |_, list_item| {
