--- a/stable/latest/book/main_event_loop.html
+++ b/stable/latest/book/main_event_loop.html
@@ -89,11 +89,33 @@
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
 
+        <!-- Track and set sidebar scroll position -->
+        <script>
+            var sidebarScrollbox = document.querySelector('#sidebar .sidebar-scrollbox');
+            sidebarScrollbox.addEventListener('click', function(e) {
+                if (e.target.tagName === 'A') {
+                    sessionStorage.setItem('sidebar-scroll', sidebarScrollbox.scrollTop);
+                }
+            }, { passive: true });
+            var sidebarScrollTop = sessionStorage.getItem('sidebar-scroll');
+            sessionStorage.removeItem('sidebar-scroll');
+            if (sidebarScrollTop) {
+                // preserve sidebar scroll position when navigating via links within sidebar
+                sidebarScrollbox.scrollTop = sidebarScrollTop;
+            } else {
+                // scroll sidebar to current active section when navigating via "next/previous chapter" buttons
+                var activeSection = document.querySelector('#sidebar .active');
+                if (activeSection) {
+                    activeSection.scrollIntoView({ block: 'center' });
+                }
+            }
+        </script>
+
         <div id="page-wrapper" class="page-wrapper">
 
             <div class="page">
                                 <div id="menu-bar-hover-placeholder"></div>
-                <div id="menu-bar" class="menu-bar sticky bordered">
+                <div id="menu-bar" class="menu-bar sticky">
                     <div class="left-buttons">
                         <button id="sidebar-toggle" class="icon-button" type="button" title="Toggle Table of Contents" aria-label="Toggle Table of Contents" aria-controls="sidebar">
                             <i class="fa fa-bars"></i>
@@ -161,7 +183,8 @@ That is why you can move the window at the same time as a progress bar is growin
 That happens when a single task takes too long.
 Let's look at one example.</p>
 <p>Filename: <a class=file-link href="https://github.com/gtk-rs/gtk4-rs/blob/master/book/listings/main_event_loop/1/main.rs">listings/main_event_loop/1/main.rs</a></p>
-<pre><code class="language-rust  no_run noplayground">use std::time::Duration;
+<pre><code class="language-rust  no_run noplayground">use std::thread;
+use std::time::Duration;
 
 use gtk::prelude::*;
 use gtk::{self, glib, Application, ApplicationWindow, Button};
@@ -193,7 +216,7 @@ fn build_ui(app: &amp;Application) {
     button.connect_clicked(move |_| {
         // GUI is blocked for 5 seconds after the button is pressed
         let five_seconds = Duration::from_secs(5);
-        std::thread::sleep(five_seconds);
+        thread::sleep(five_seconds);
     });
 
     // Create a window
@@ -211,13 +234,13 @@ We can't even move the window.
 The <code>sleep</code> call is an artificial example,
 but it is not unusual wanting to run a slightly longer operation in one go.</p>
 <h2 id="how-to-avoid-blocking-the-main-loop"><a class="header" href="#how-to-avoid-blocking-the-main-loop">How to Avoid Blocking the Main Loop</a></h2>
-<p>In order to avoid blocking the main loop we can spawn a new thread and let the operation run there.</p>
+<p>In order to avoid blocking the main loop we can spawn a new thread with <a href="https://gtk-rs.org/gtk-rs-core/stable/latest/docs/gio/fn.spawn_blocking.html"><code>gio::spawn_blocking</code></a> and let the operation run there.</p>
 <p>Filename: <a class=file-link href="https://github.com/gtk-rs/gtk4-rs/blob/master/book/listings/main_event_loop/2/main.rs">listings/main_event_loop/2/main.rs</a></p>
 <pre><code class="language-rust  no_run noplayground"><span class="boring">use std::thread;
 </span><span class="boring">use std::time::Duration;
 </span><span class="boring">
 </span><span class="boring">use gtk::prelude::*;
-</span><span class="boring">use gtk::{self, glib, Application, ApplicationWindow, Button};
+</span><span class="boring">use gtk::{self, gio, glib, Application, ApplicationWindow, Button};
 </span><span class="boring">
 </span><span class="boring">const APP_ID: &amp;str = &quot;org.gtk_rs.MainEventLoop2&quot;;
 </span><span class="boring">
@@ -245,7 +268,7 @@ but it is not unusual wanting to run a slightly longer operation in one go.</p>
 </span>    // Connect to &quot;clicked&quot; signal of `button`
     button.connect_clicked(move |_| {
         // The long running operation runs now in a separate thread
-        thread::spawn(move || {
+        gio::spawn_blocking(move || {
             let five_seconds = Duration::from_secs(5);
             thread::sleep(five_seconds);
         });
@@ -280,9 +303,9 @@ We want to send a <code>bool</code> to inform, whether we want the button to rea
 <pre><code class="language-rust  no_run noplayground"><span class="boring">use std::thread;
 </span><span class="boring">use std::time::Duration;
 </span><span class="boring">
-</span><span class="boring">use glib::{clone, Continue, MainContext, PRIORITY_DEFAULT};
+</span><span class="boring">use glib::{clone, MainContext, Priority};
 </span><span class="boring">use gtk::prelude::*;
-</span><span class="boring">use gtk::{glib, Application, ApplicationWindow, Button};
+</span><span class="boring">use gtk::{gio, glib, Application, ApplicationWindow, Button};
 </span><span class="boring">
 </span><span class="boring">const APP_ID: &amp;str = &quot;org.gtk_rs.MainEventLoop3&quot;;
 </span><span class="boring">
@@ -307,12 +330,12 @@ We want to send a <code>bool</code> to inform, whether we want the button to rea
 </span><span class="boring">        .margin_end(12)
 </span><span class="boring">        .build();
 </span><span class="boring">
-</span>    let (sender, receiver) = MainContext::channel(PRIORITY_DEFAULT);
+</span>    let (sender, receiver) = MainContext::channel(Priority::default());
     // Connect to &quot;clicked&quot; signal of `button`
     button.connect_clicked(move |_| {
         let sender = sender.clone();
         // The long running operation runs now in a separate thread
-        thread::spawn(move || {
+        gio::spawn_blocking(move || {
             // Deactivate the button until the operation is done
             sender.send(false).expect(&quot;Could not send through channel&quot;);
             let ten_seconds = Duration::from_secs(10);
@@ -325,11 +348,11 @@ We want to send a <code>bool</code> to inform, whether we want the button to rea
     // The main loop executes the closure as soon as it receives the message
     receiver.attach(
         None,
-        clone!(@weak button =&gt; @default-return Continue(false),
-                    move |enable_button| {
-                        button.set_sensitive(enable_button);
-                        Continue(true)
-                    }
+        clone!(@weak button =&gt; @default-return glib::ControlFlow::Break,
+            move |enable_button| {
+                button.set_sensitive(enable_button);
+                glib::ControlFlow::Continue
+            }
         ),
     );
 <span class="boring">
@@ -351,15 +374,15 @@ We want to send a <code>bool</code> to inform, whether we want the button to rea
 </div>
 <blockquote>
 <p>Per default, <a href="https://gtk-rs.org/gtk-rs-core/stable/latest/docs/glib/macro.clone.html"><code>glib::clone!</code></a> returns <code>()</code> when upgrading of a weak reference fails.
-<a href="https://gtk-rs.org/gtk-rs-core/stable/latest/docs/glib/struct.Receiver.html#method.attach"><code>glib::Receiver::attach</code></a> expects a closure with a return value of type <a href="https://gtk-rs.org/gtk-rs-core/stable/latest/docs/glib/source/struct.Continue.html"><code>glib::Continue</code></a>.
-This is why we specify <code>@default-return</code> as <code>Continue(False)</code> to clarify that the closure not be called anymore as soon as the upgrade of a weak reference fails.</p>
+<a href="https://gtk-rs.org/gtk-rs-core/stable/latest/docs/glib/struct.Receiver.html#method.attach"><code>glib::Receiver::attach</code></a> expects a closure with a return value of type <a href="https://gtk-rs.org/gtk-rs-core/stable/latest/docs/glib/enum.ControlFlow.html"><code>glib::ControlFlow</code></a>.
+This is why we specify <code>@default-return</code> as <code>glib::ControlFlow::Break</code> to clarify that the closure not be called anymore as soon as the upgrade of a weak reference fails.</p>
 </blockquote>
 <p>Spawning threads is not the only way to run operations asynchronously.
 You can also let the main loop take care of running <a href="https://rust-lang.github.io/async-book/"><code>async</code></a> functions.
 If you do that from the main thread use <a href="https://gtk-rs.org/gtk-rs-core/stable/latest/docs/glib/struct.MainContext.html#method.spawn_local"><code>spawn_local</code></a>, from other threads <a href="https://gtk-rs.org/gtk-rs-core/stable/latest/docs/glib/struct.MainContext.html#method.spawn"><code>spawn</code></a> has to be used.
 The converted code looks and behaves very similar to the multi-threaded code.</p>
 <p>Filename: <a class=file-link href="https://github.com/gtk-rs/gtk4-rs/blob/master/book/listings/main_event_loop/4/main.rs">listings/main_event_loop/4/main.rs</a></p>
-<pre><code class="language-rust  no_run noplayground"><span class="boring">use glib::{clone, timeout_future_seconds, Continue, MainContext, PRIORITY_DEFAULT};
+<pre><code class="language-rust  no_run noplayground"><span class="boring">use glib::{clone, timeout_future_seconds, MainContext, Priority};
 </span><span class="boring">use gtk::prelude::*;
 </span><span class="boring">use gtk::{glib, Application, ApplicationWindow, Button};
 </span><span class="boring">
@@ -386,7 +409,7 @@ The converted code looks and behaves very similar to the multi-threaded code.</p
 </span><span class="boring">        .margin_end(12)
 </span><span class="boring">        .build();
 </span><span class="boring">
-</span>    let (sender, receiver) = MainContext::channel(PRIORITY_DEFAULT);
+</span>    let (sender, receiver) = MainContext::channel(Priority::default());
     // Connect to &quot;clicked&quot; signal of `button`
     button.connect_clicked(move |_| {
         let main_context = MainContext::default();
@@ -403,11 +426,11 @@ The converted code looks and behaves very similar to the multi-threaded code.</p
     // The main loop executes the closure as soon as it receives the message
     receiver.attach(
         None,
-        clone!(@weak button =&gt; @default-return Continue(false),
-                    move |enable_button| {
-                        button.set_sensitive(enable_button);
-                        Continue(true)
-                    }
+        clone!(@weak button =&gt; @default-return glib::ControlFlow::Break,
+            move |enable_button| {
+                button.set_sensitive(enable_button);
+                glib::ControlFlow::Continue
+            }
         ),
     );
 <span class="boring">
@@ -477,7 +500,7 @@ The converted code looks and behaves very similar to the multi-threaded code.</p
 <pre><pre class="playground"><code class="language-rust  no_run compile_fail"><span class="boring">use std::{thread, time::Duration};
 </span><span class="boring">
 </span><span class="boring">use glib::{clone, MainContext, PRIORITY_DEFAULT};
-</span><span class="boring">use gtk::glib;
+</span><span class="boring">use gtk::{glib, gio};
 </span><span class="boring">use gtk::prelude::*;
 </span><span class="boring">use gtk::{Application, ApplicationWindow, Button};
 </span><span class="boring">
@@ -519,7 +542,7 @@ The converted code looks and behaves very similar to the multi-threaded code.</p
     button.connect_clicked(move |button| {
         button.clone();
         // The long running operation runs now in a separate thread
-        thread::spawn(move || {
+        gio::spawn_blocking(move || {
             // Deactivate the button until the operation is done
             button.set_sensitive(false);
             let five_seconds = Duration::from_secs(5);
