--- a/stable/latest/book/settings.html
+++ b/stable/latest/book/settings.html
@@ -89,11 +89,33 @@
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
 
+        <!-- Track and set sidebar scroll position -->
+        <script>
+            var sidebarScrollbox = document.querySelector('#sidebar .sidebar-scrollbox');
+            sidebarScrollbox.addEventListener('click', function(e) {
+                if (e.target.tagName === 'A') {
+                    sessionStorage.setItem('sidebar-scroll', sidebarScrollbox.scrollTop);
+                }
+            }, { passive: true });
+            var sidebarScrollTop = sessionStorage.getItem('sidebar-scroll');
+            sessionStorage.removeItem('sidebar-scroll');
+            if (sidebarScrollTop) {
+                // preserve sidebar scroll position when navigating via links within sidebar
+                sidebarScrollbox.scrollTop = sidebarScrollTop;
+            } else {
+                // scroll sidebar to current active section when navigating via "next/previous chapter" buttons
+                var activeSection = document.querySelector('#sidebar .active');
+                if (activeSection) {
+                    activeSection.scrollIntoView({ block: 'center' });
+                }
+            }
+        </script>
+
         <div id="page-wrapper" class="page-wrapper">
 
             <div class="page">
                                 <div id="menu-bar-hover-placeholder"></div>
-                <div id="menu-bar" class="menu-bar sticky bordered">
+                <div id="menu-bar" class="menu-bar sticky">
                     <div class="left-buttons">
                         <button id="sidebar-toggle" class="icon-button" type="button" title="Toggle Table of Contents" aria-label="Toggle Table of Contents" aria-controls="sidebar">
                             <i class="fa fa-bars"></i>
@@ -168,7 +190,6 @@ Let's learn how to use <a href="https://gtk-rs.org/gtk-rs-core/stable/latest/doc
 The <code>id</code> is the same application id we used when we created our application.</p>
 <p>Filename: <a class=file-link href="https://github.com/gtk-rs/gtk4-rs/blob/master/book/listings/settings/1/main.rs">listings/settings/1/main.rs</a></p>
 <pre><code class="language-rust  no_run noplayground"><span class="boring">use gio::Settings;
-</span><span class="boring">use gtk::glib::signal::Inhibit;
 </span><span class="boring">use gtk::prelude::*;
 </span><span class="boring">use gtk::{gio, glib, Align, Application, ApplicationWindow, Switch};
 </span><span class="boring">
@@ -209,7 +230,7 @@ The <code>id</code> is the same application id we used when we created our appli
 </span><span class="boring">            .set_boolean(&quot;is-switch-enabled&quot;, is_enabled)
 </span><span class="boring">            .expect(&quot;Could not set setting.&quot;);
 </span><span class="boring">        // Don't inhibit the default handler
-</span><span class="boring">        Inhibit(false)
+</span><span class="boring">        glib::ControlFlow::Continue
 </span><span class="boring">    });
 </span><span class="boring">
 </span><span class="boring">    // Create a window
@@ -244,7 +265,6 @@ glib-compile-schemas C:/ProgramData/glib-2.0/schemas/
 <p>We initialize the <code>Settings</code> object by specifying the application id.</p>
 <p>Filename: <a class=file-link href="https://github.com/gtk-rs/gtk4-rs/blob/master/book/listings/settings/1/main.rs">listings/settings/1/main.rs</a></p>
 <pre><code class="language-rust  no_run noplayground"><span class="boring">use gio::Settings;
-</span><span class="boring">use gtk::glib::signal::Inhibit;
 </span><span class="boring">use gtk::prelude::*;
 </span><span class="boring">use gtk::{gio, glib, Align, Application, ApplicationWindow, Switch};
 </span><span class="boring">
@@ -285,7 +305,7 @@ glib-compile-schemas C:/ProgramData/glib-2.0/schemas/
 </span><span class="boring">            .set_boolean(&quot;is-switch-enabled&quot;, is_enabled)
 </span><span class="boring">            .expect(&quot;Could not set setting.&quot;);
 </span><span class="boring">        // Don't inhibit the default handler
-</span><span class="boring">        Inhibit(false)
+</span><span class="boring">        glib::ControlFlow::Continue
 </span><span class="boring">    });
 </span><span class="boring">
 </span><span class="boring">    // Create a window
@@ -301,7 +321,6 @@ glib-compile-schemas C:/ProgramData/glib-2.0/schemas/
 <p>Then we get the settings key and use it when we create our <code>Switch</code>.</p>
 <p>Filename: <a class=file-link href="https://github.com/gtk-rs/gtk4-rs/blob/master/book/listings/settings/1/main.rs">listings/settings/1/main.rs</a></p>
 <pre><code class="language-rust  no_run noplayground"><span class="boring">use gio::Settings;
-</span><span class="boring">use gtk::glib::signal::Inhibit;
 </span><span class="boring">use gtk::prelude::*;
 </span><span class="boring">use gtk::{gio, glib, Align, Application, ApplicationWindow, Switch};
 </span><span class="boring">
@@ -342,7 +361,7 @@ glib-compile-schemas C:/ProgramData/glib-2.0/schemas/
 </span><span class="boring">            .set_boolean(&quot;is-switch-enabled&quot;, is_enabled)
 </span><span class="boring">            .expect(&quot;Could not set setting.&quot;);
 </span><span class="boring">        // Don't inhibit the default handler
-</span><span class="boring">        Inhibit(false)
+</span><span class="boring">        glib::ControlFlow::Continue
 </span><span class="boring">    });
 </span><span class="boring">
 </span><span class="boring">    // Create a window
@@ -358,7 +377,6 @@ glib-compile-schemas C:/ProgramData/glib-2.0/schemas/
 <p>Finally, we assure that the switch state is stored in the settings whenever we click on it.</p>
 <p>Filename: <a class=file-link href="https://github.com/gtk-rs/gtk4-rs/blob/master/book/listings/settings/1/main.rs">listings/settings/1/main.rs</a></p>
 <pre><code class="language-rust  no_run noplayground"><span class="boring">use gio::Settings;
-</span><span class="boring">use gtk::glib::signal::Inhibit;
 </span><span class="boring">use gtk::prelude::*;
 </span><span class="boring">use gtk::{gio, glib, Align, Application, ApplicationWindow, Switch};
 </span><span class="boring">
@@ -399,7 +417,7 @@ glib-compile-schemas C:/ProgramData/glib-2.0/schemas/
             .set_boolean(&quot;is-switch-enabled&quot;, is_enabled)
             .expect(&quot;Could not set setting.&quot;);
         // Don't inhibit the default handler
-        Inhibit(false)
+        glib::ControlFlow::Continue
     });
 <span class="boring">
 </span><span class="boring">    // Create a window
@@ -424,9 +442,8 @@ The <code>Switch</code> has a property &quot;active&quot; and <code>Settings</co
 So let's do exactly that.</p>
 <p>We can remove the <a href="https://gtk-rs.org/gtk-rs-core/stable/latest/docs/gio/prelude/trait.SettingsExt.html#tymethod.boolean"><code>boolean</code></a> call before initializing the <code>Switch</code> as well as the <a href="../docs/gtk4/struct.Switch.html#method.connect_state_set"><code>connect_state_set</code></a> call.
 We then bind the setting to the property by specifying the key, object and name of the property.
-Additionally, we specify <a href="https://gtk-rs.org/gtk-rs-core/stable/latest/docs/gio/struct.SettingsBindFlags.html"><code>SettingsBindFlags</code></a> to control the direction in which the binding works.</p>
-<p>Filename: <a class=file-link href="https://github.com/gtk-rs/gtk4-rs/blob/master/book/listings/settings/2/main.rs">listings/settings/2/main.rs</a></p>
-<pre><code class="language-rust  no_run noplayground"><span class="boring">use gio::{Settings, SettingsBindFlags};
+Filename: <a class=file-link href="https://github.com/gtk-rs/gtk4-rs/blob/master/book/listings/settings/2/main.rs">listings/settings/2/main.rs</a></p>
+<pre><code class="language-rust  no_run noplayground"><span class="boring">use gio::Settings;
 </span><span class="boring">use gtk::prelude::*;
 </span><span class="boring">use gtk::{gio, glib, Align, Application, ApplicationWindow, Switch};
 </span><span class="boring">
@@ -459,7 +476,6 @@ Additionally, we specify <a href="https://gtk-rs.org/gtk-rs-core/stable/latest/d
 </span><span class="boring">
 </span>    settings
         .bind(&quot;is-switch-enabled&quot;, &amp;switch, &quot;active&quot;)
-        .flags(SettingsBindFlags::DEFAULT)
         .build();
 <span class="boring">
 </span><span class="boring">    // Create a window
