deploy: e5b7cdd9b5070a46fd09b70a416ef4487e4c6c72

--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
             </ul>
             <h1>Specific versions</h1>
             <ul>
+    <li><a href="stable/0.7/docs">Version 0.7</a></li>
+
     <li><a href="stable/0.6/docs">Version 0.6</a></li>
 
     <li><a href="stable/0.5/docs">Version 0.5</a></li>
@@ -74,7 +76,7 @@
             </ul>
         </section>
         <footer>
-            Generated Fri Apr 28 15:38:25 2023 UTC by <a href="https://gitlab.gnome.org/World/Rust/gir-rustdoc">gir-rustdoc</a>
+            Generated Fri Aug  4 16:06:48 2023 UTC by <a href="https://gitlab.gnome.org/World/Rust/gir-rustdoc">gir-rustdoc</a>
         </footer>
     </body>
 </html>
